--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_clean_architecture: ^3.0.2
+  intro_slider: ^2.2.9
 
 dev_dependencies:
   flutter_test:
