--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_clean_architecture: ^3.0.2
   intro_slider: ^2.2.9
+  carousel_slider: ^2.0.0
 
 dev_dependencies:
   flutter_test:
