--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_clean_architecture: ^3.0.2
-  intro_slider: ^2.2.9
+  dio: ^3.0.9
   carousel_slider: ^2.0.0
 
 dev_dependencies:
