--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_clean_architecture: ^3.0.2
   dio: ^3.0.9
   carousel_slider: ^2.0.0
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
