--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   dio: ^3.0.9
   carousel_slider: ^2.0.0
   shared_preferences: ^0.5.6+3
+  intl: ^0.16.1
+  line_awesome_icons: ^1.0.4+2
 
 dev_dependencies:
   flutter_test:
