--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   carousel_slider: ^2.0.0
   shared_preferences: ^0.5.6+3
   intl: ^0.16.1
-  line_awesome_icons: ^1.0.4+2
+  font_awesome_flutter: ^8.8.1
 
 dev_dependencies:
   flutter_test:
