--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   intl: ^0.16.1
   font_awesome_flutter: ^8.8.1
+  datetime_picker_formfield: ^1.0.0
 
 dev_dependencies:
   flutter_test:
